2008-04-27  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/stmt.c, lib/oci8/oci8.rb: fix typo.
	    (pointed by Liming)
	* dist-files: fix added and deleted files.

2008-04-08  KUBO Takehiro  <kubo@jiubao.org>
	* metaconfig: add '-w' when running test cases.
	* test/test_metadata.rb: suppress warning: "shadowing outer local variable - i."
	* ext/oci8/stmt.c: suppress warning: "warning: instance variable
	    @max_array_size not initialized" at lib/oci8/oci8.rb:375.

2008-03-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c, ext/oci8/extconf.rb, ext/oci8/oci8.h
	  ext/oci8/oci8lib.c: add a new file encoding.c.
	    oci8_charset_id2name() is added to convert Oracle charset
	    id to charset name. If the Oracle client version is 9iR2
	    or upper, it uses OCINlsCharSetIdToName(). If 9iR1 or lower,
	    it uses PL/SQL function nls_charset_name() and converts
	    at the server side.
	* ext/oci8/metadata.c: use oci8_charset_id2name() instead of
	    OCINlsCharSetIdToName().

2008-03-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8lib.c, ext/oci8/oci8.h:
	    When '--with-runtime-check' is passed to extconf.rb, oci8lib.so
	    is no longer linked to an Oracle client library at compilation
	    time. It tries to search the Oracle client library at runtime.
	* ext/oci8/bind.c: define OCI8::BindType::BinaryDouble when
	    oracle_client_version's value is 10g or later, not when SQLT_BDOUBLE
	    is declared. This is for runtime check.

2008-03-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/lob.c, ext/oci8/object.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/ocinumber.c,
	  ext/oci8/oradate.c, ext/oci8/stmt.c: add qualifier 'const' to
	    oci8_bind_*class_t values. These are read only.

2008-03-22  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/.: add apiwrap.[ch] to svn:ignore property.
	* ext/oci8/apiwrap.c.tmpl, ext/oci8/apiwrap.rb, ext/oci8/apiwrap.yml: